feat(subscriptions): manage auto-bookmarking from bookmarks (#360)
